// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Select default should render Select 1`] = `
.c1 {
  box-sizing: border-box;
  margin-bottom: 4px;
}

.c3 {
  box-sizing: border-box;
}

.c0 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c4 {
  position: relative;
  border-radius: 4px;
  background: transparent;
  border: 1px solid #8C8C8C;
  font: inherit;
  color: currentColor;
  width: 100%;
  height: 3em;
  margin: 0;
  padding: 6px 12px 7px;
}

.c4:focus,
.c4:active {
  border-color: red;
  border: 2px solid #0086FF;
  padding: 5px 11px 6px;
  box-shadow: none !important;
  outline: 0;
  box-shadow: none !important;
}

.c2 {
  font-size: 13px;
  font-weight: 700;
  color: #404040;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <label
      className="c2"
    />
  </div>
  <div
    className="c3"
  >
    <select
      className="c4"
    >
      <option>
        Selecione
      </option>
      <option
        value="run"
      >
        Run
      </option>
      <option
        value="swimming"
      >
        Swimming
      </option>
      <option
        value="bike"
      >
        Bike
      </option>
    </select>
  </div>
</div>
`;

exports[`Select error should render Select with error state 1`] = `
.c1 {
  box-sizing: border-box;
  margin-bottom: 4px;
}

.c3 {
  box-sizing: border-box;
}

.c5 {
  box-sizing: border-box;
  margin-top: 4px;
}

.c0 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c4 {
  position: relative;
  border-radius: 4px;
  background: transparent;
  border: 2px solid #FF253A;
  font: inherit;
  color: currentColor;
  width: 100%;
  height: 3em;
  margin: 0;
  padding: 5px 11px 6px;
}

.c4:focus,
.c4:active {
  border-color: red;
  border: 2px solid #FF253A;
  padding: 5px 11px 6px;
  box-shadow: none !important;
  outline: 0;
  box-shadow: none !important;
}

.c2 {
  font-size: 13px;
  font-weight: 700;
  color: #404040;
}

.c6 {
  font-size: 13px;
  color: #FF253A;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <label
      className="c2"
    />
  </div>
  <div
    className="c3"
  >
    <select
      className="c4"
    >
      <option>
        Selecione
      </option>
      <option
        value="run"
      >
        Run
      </option>
      <option
        value="swimming"
      >
        Swimming
      </option>
      <option
        value="bike"
      >
        Bike
      </option>
    </select>
  </div>
  <div
    className="c5"
  >
    <span
      className="c6"
    >
      
    </span>
  </div>
</div>
`;
